Resolves: tdf#154915 Let empty intersection error be #NULL! instead of #REF!

Change-Id: I51f0bca8af2b283bfc72dfe75b04507c1d717014
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150653
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins